--- a/test_scottplot5.csproj
+++ b/test_scottplot5.csproj
@@ -6,21 +6,21 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
-    <AssemblyVersion>1.0.8969.557</AssemblyVersion>
-    <FileVersion>1.0.8969.557</FileVersion>
+    <AssemblyVersion>1.0.9447.561</AssemblyVersion>
+    <FileVersion>1.0.9447.561</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Colorful.Console" Version="1.2.15" />
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
-    <PackageReference Include="MahApps.Metro.IconPacks" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.122" />
-    <PackageReference Include="ScottPlot.WPF" Version="5.0.34" />
-    <PackageReference Include="Serilog" Version="4.0.0-dev-02201" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="5.1.0-dev-00943" />
-    <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00972" />
-    <PackageReference Include="System.Management" Version="9.0.0-preview.4.24266.19" />
-    <PackageReference Include="Vanara.PInvoke.User32" Version="4.0.1" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="MahApps.Metro.IconPacks" Version="6.2.1" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
+    <PackageReference Include="ScottPlot.WPF" Version="5.1.57" />
+    <PackageReference Include="Serilog" Version="4.3.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+    <PackageReference Include="System.Management" Version="10.0.0" />
+    <PackageReference Include="Vanara.PInvoke.User32" Version="4.2.1" />
   </ItemGroup>
 
 </Project>
